--- a/app/src/main/res/layout/game_screen.xml
+++ b/app/src/main/res/layout/game_screen.xml
@@ -44,7 +44,7 @@
     </GridLayout>
 
     <TextView
-        android:text="<Word Attempt will be here>"
+        android:text="Word Attempt will be here"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -54,7 +54,7 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:text="<Valid Word attempts will be listed here.>"
+        android:text="Valid Word attempts will be listed here."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textTitle"
