--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:onClick="gotoChallengeSelection"
     tools:context="com.cs399.tbgs.anagramz.MainActivity">
 
     <TextView
@@ -17,7 +14,7 @@
         android:text="Anagramz"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="15dp"
         android:textSize="75sp"
         android:id="@+id/textTitle" />
 
@@ -28,5 +25,5 @@
         android:id="@+id/textContinue"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="87dp" />
+        android:layout_marginBottom="60dp" />
 </RelativeLayout>
