--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -16,61 +16,34 @@
         android:textSize="75sp"
         android:id="@+id/textTitle" />
 
-    <GridLayout
-        android:id="@+id/gridLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true">
-
-        <Button
-            android:text="Character1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button"
-            android:layout_row="1"
-            android:layout_column="0"/>
-        <Button
-            android:text="Character2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button2"
-            android:layout_row="1"
-            android:layout_column="1"/>
-        <Button
-            android:text="ETC."
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button3"
-            android:layout_row="1"
-            android:layout_column="2"/>
-
-    </GridLayout>
-
     <TextView
         android:text="Word Attempt will be here"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:layout_below="@+id/textTitle"
         android:id="@+id/textView"
-        android:layout_above="@+id/gridLayout"
         android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:text="Valid Word attempts will be listed here."
-        android:layout_width="wrap_content"
+    <org.apmem.tools.layouts.FlowLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textTitle"
-        android:layout_alignLeft="@+id/textTitle"
-        android:layout_alignStart="@+id/textTitle"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/textView3"
-        android:layout_above="@+id/textView"
-        android:layout_alignRight="@+id/textTitle"
-        android:layout_alignEnd="@+id/textTitle"
-        android:background="#FFFFFF"
-        android:textColor="#000000" />
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:id="@+id/inputLettersLayout">
+
+    </org.apmem.tools.layouts.FlowLayout>
+
+    <org.apmem.tools.layouts.FlowLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/inputLettersLayout"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingBottom="90dp"
+        android:id="@+id/guessLettersLayout">
+    </org.apmem.tools.layouts.FlowLayout>
 
 </RelativeLayout>
