--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app=""
     android:id="@+id/activity_game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,16 +16,6 @@
         android:layout_marginTop="15dp"
         android:textSize="75sp"
         android:id="@+id/textTitle" />
-
-    <TextView
-        android:text="Word Attempt will be here"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_below="@+id/textTitle"
-        android:id="@+id/textView"
-        android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true" />
 
     <org.apmem.tools.layouts.FlowLayout
         android:layout_width="match_parent"
@@ -45,5 +36,13 @@
         android:paddingBottom="90dp"
         android:id="@+id/guessLettersLayout">
     </org.apmem.tools.layouts.FlowLayout>
+
+    <ProgressBar
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textTitle"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/progressBar4" />
 
 </RelativeLayout>
