--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app=""
     android:id="@+id/activity_game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -87,6 +86,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textTitle"
         android:layout_centerHorizontal="true"
-        android:id="@+id/progressBar4" />
+        android:id="@+id/progressBar4"
+        android:max="30000"
+        android:progress="30000" />
 
 </RelativeLayout>
